--- a/WuGuWetlandsTask.html
+++ b/WuGuWetlandsTask.html
@@ -39,7 +39,7 @@
 					<a href="FiddlerCrab.html"><div class="inner">
 						<header>
 							<p>別看我個子小 卻是沙灘上的指揮官，只要我大手一揮 來自海上的萬千騎兵 立刻就前來報到。  文 若綺/圖 小瓢蟲愛玩生活創藝</p>
-							<h2>溼地上的提琴手</h2>
+							<h2>溼地提琴手</h2>
 						</header>
 					</div></a>
 				</article>
