--- a/202004YellowWaterLily.html
+++ b/202004YellowWaterLily.html
@@ -4,6 +4,7 @@
 		<title>萍蓬草 Yellow Water Lily</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta http-equiv="Cache-Control" content="no-cache">
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 <script type="text/javascript">
