--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>五股溼地</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta http-equiv="Cache-Control" content="no-cache">
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 
