--- a/index.html
+++ b/index.html
@@ -83,14 +83,13 @@
 			<footer id="footer">
 				<div class="container">
 					<ul class="icons">
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+						<li><a href="https://www.facebook.com/groups/489356797911055/?ref=group_header" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="https://sites.google.com/view/sowty2/home" target="_blank" class="icon fa-google"><span class="label">Google</span></a></li>
+						<li><a href="mailto:sowtaoyuanbee2@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 					</ul>
 				</div>
 				<div class="copyright">
-					&copy; Taoyuan-SOW. All rights reserved.
+					&copy; SOW-Taoyuan2 All rights reserved.
 				</div>
 			</footer>
 
