add Bittervine, Reed, and index

--- a/202004WuGuWetlands.html
+++ b/202004WuGuWetlands.html
@@ -40,40 +40,42 @@
 				<div class="inner">
 					<div class="box">
 						<div class="content">
-							<header class="align-center">
-								<p>五股溼地</p>
-								<h2>賞鳥</h2>
-							</header>
-							<h2>五股溼地介紹</h2>
-							<p><iframe width="280" height="108" src="https://www.youtube.com/embed/j5mfbGy0kwg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
-							<br/>
-							<br/>
-
-							<h2>親子活動規則</h2>
-							<p>活動說明的前世今生、來龍去脈.....................................</p>
-							<br/>
-							<br/>
+							<h2>各位聰明的小蜂、小蟻們～恭喜你們成功開啟了今天的團集會任務！</h2>
+							<h3>這個月我們來到由荒野保護協會所認養的五股濕地喔，這裡有許許多多不同的濕地植物、還有濕地常見的招潮蟹，彈塗魚...等等許多大自然中的好朋友等著我們去拜訪他們喔！</h3>
+							<h3>若要參加4/12一日限定的工作假期 - 清除小花蔓澤蘭，請<a href="https://forms.gle/YG99EaC4skZj58ob7" target="_blank">點此Google表單</a></h3>
 
 
-							<!--<a href="https://www.relive.cc/view/v1vjpM1B5J6" ><span class="button alt icon fa-check">海芋五股溼地總勘 with relive</span></a>
-							<a href="https://www.relive.cc/view/vXvLYKX8j1O" ><span class="button alt icon fa-check">黑琵鷺五股溼地總勘 with relive</span></a>-->
 
-							<a href="https://www.relive.cc/view/v1vjpM1B5J6" target="_blank"><span class="button alt icon fa-check">用relive記錄你的精采旅程</span></a>
-							<p>活動如何結合relive進行互動說明.....................................</p>
-							<a href="https://www.relive.cc/view/vXvLYKX8j1O" target="_blank"><span><img src="images/relive_demo2.png" border="0"></span></a>
+							<h2 style="font-weight:bold;">團集會探索任務</h2>
+							<h3>　　今天將由你們和爸爸媽媽組成親子隊，一起探索五股溼地，隨地圖的指示點及線上的活動說明，愉快的體驗每個任務！開始前，請先看活動說明：</h3>
+							<h3>1.	爸爸媽媽就是你們這次的導引員＋攝影官，負責傳達任務和紀錄活動過程，都會用到手機，所以除了找方向和討論任務以外的時間，請由爸爸媽媽來拿手機喔！</h3>
+							<h3>2.	闖關過程若遇到其他家庭成員記得趕快迴避~~說錯~~~是記得保持1公尺社交距離，還是可以熱情的打招呼。若路上太孤單想就地結盟基本上是不反對，但請不要找陌生人並以不超過3個家庭為限。</h3>
+							<h3>3.	時間沒有限制、活動沒有記分，卡關歡迎線上求救，記得所有的大人都是導引員，互相幫忙是應該的。</h3>
+							<h3>4.	除了用筆記、撿拾落葉創作外，這次也可以請爸媽試試利用APP拍照和紀錄軌跡，製作獨一無二的活動紀錄喔！</h3>
+							<hr />
 
-						</div>
+							<h2>出發前先來<span style="font-weight:bold;"><a href="202004WuGuWetlandsIntroduction.html" target="_blank">認識五股溼地</a></span></h2>
+							<h3>準備好了嗎? 現在就跟著爸爸、媽媽的腳步，帶上你的探險筆記展開一天的冒險吧！</h3>
+							<hr />
 
-						<div class="content">
-							<h2>闖關規則</h2>
-							<p>闖關規則.....闖關規則.....闖關規則.........闖關規則.......................</p>
 
+							<h2 style="font-weight:bold;">探索地圖說明：</h2><h2>請找到探索地圖上的標記位置後，開啟探索任務（共10個）</h2>
+							<img src="images/icon_task.png" border="0">
+							<h3>8個QR code任務掃描點，請找找看附近的人造物(路障、燈柱、垃圾桶、箱子...等等）上有沒有可疑的圖片，掃描後即可開啟任務網頁</h3>
+
+							<a href="202004Tree.html" target="_blank"><img src="images/icon_tree.png" border="0"></a>
+							<h3><a href="202004Tree.html" target="_blank">爬樹體驗點，直接點此開啟任務</a></h3>
+
+							<a href="202004Bittervine.html" target="_blank"><img src="images/icon_telescope.png" border="0"></a>
+							<h3><a href="202004Bittervine.html" target="_blank">生態觀察點，直接點此開啟任務</a></h3>
+
+
+							<a href="https://drive.google.com/open?id=1mLWNBCqkNP3nErz5panRMtplpTgPtP-H&usp=sharing" target="_blank"><span class="image fit"><img src="images/五股溼地探索地圖.jpg" alt="" /></span></a>
+							<hr />
 							
-							<a href="202004WuGuWetlandsTask.html" target="_blank"><span><p>Ready? Go~</p></span></a>
 
-						</div>
-
-
+							<a href="202004WuGuWetlandsTask.html" target="_blank"><h3>如果實在找不到QR code，大蟻大蜂可以點此進入任務清單，找到對應的任務直接點選。</h3></a>
+							
 
 					</div>
 				</div>
