--- a/202004Bittervine.html
+++ b/202004Bittervine.html
@@ -87,6 +87,8 @@
 							<!-- Text stuff -->
 								<h3 style="font-weight:bold;">如何找出小花蔓澤蘭呢?</h3>
 								<span class="image fit"><img src="images/小花蔓澤蘭2.jpg" alt="" /></span>
+								<p>(圖片來源：<a href="https://blog.xuite.net/chenfu2007/wland/50270455" target="_blank">成福水草塘</a>-小花蔓澤蘭與原生蔓澤蘭辨識方法)</p>
+								<p></p>
 								<h3>　　小花蔓澤蘭的葉面像狹長的愛心，也像狐狸臉，很容易辨認。它原生於中南美洲，海拔一千公尺以下，中、低海拔的山野處、廢耕地或乏人管理的果園與檳榔園，都是它可能居住的地方。小花蔓澤蘭會往光照充足的方向生長（趨光性），一攀上樹木就會覆蓋上去，大量生長爭取陽光，結果讓下方的植物無法行光合作用，下方的植物就會因此缺少養分，最後枯死。所以它有「綠色殺手」、「植物殺手」之稱。</h3>
 								<h3>沿著這條路往南走，就有機會在路旁的草叢間找到小花蔓澤蘭的蹤跡，可以試著找找看！</h3>
 								<hr />
@@ -95,10 +97,16 @@
 								<h3 style="font-weight:bold;">繁殖和散佈能力超強的「綠癌」</h3>
 								<h3>小花蔓澤蘭在每年的10月到隔年1月開花，</h3>
 								<span class="image fit"><img src="images/小花蔓澤蘭3.jpg" alt="" /></span>
+								<p>(圖片來源：<a href="https://teia.tw/zh-hant/natural-valley/species/11961" target="_blank">台灣環境資訊協會</a>)</p>
+								<p></p>
 								<h3>大約於11月中旬，帶有冠毛的種子會開始大量成熟，每平方公尺可產生17萬個種子，它可以輕盈的隨風飄揚，迅速傳播出去。</h3>
 								<span class="image fit"><img src="images/小花蔓澤蘭4.jpg" alt="" /></span>
+								<p>(圖片來源：<a href="https://sowhc.sow.org.tw/html/photo02/103photo/children/10310a/10310a.htm" target="_blank">荒野解說活動</a>)</p>
+								<p></p>
 								<h3>除了透過種子（有性繁殖）之外，它莖蔓的每個節都可長出新芽，節與節間還能長出不定根（無性繁殖），接觸地面繼續生長。‬</h3>
 								<span class="image fit"><img src="images/小花蔓澤蘭5.jpg" alt="" /></span>
+								<p>(圖片來源：<a href="https://sowhc.sow.org.tw/html/photo02/103photo/children/10310a/10310a.htm" target="_blank">荒野解說活動</a>)</p>
+								<p></p>
 								<h3>而且它的生長速度奇快，每天可生長24公分，所以英文稱它為Mile-a-minute Weed（意為一分鐘可生長一英里的野草）。這麼強盛的散布能力和繁殖力，讓小花蔓澤蘭在台灣快速擴散成為不易根除的「綠癌」，威脅當地生態。也被世界自然保育聯盟IUCN列入全球100種最具危害力之外來入侵物種。‬</h3>
 								<h3>　　為了不讓更多植物受到小花蔓澤蘭的危害，全台各地都有志工號召清除它。五股溼地的工作假期也包含了這項工作。‬</h3>
 								<hr />
@@ -113,7 +121,7 @@
 
 
 							<!-- Text stuff -->
-								<h3 style="font-weight:bold;">試試看，哪個時節去清除小花蔓澤蘭，最能有效阻止它繼續蔓延?</h3>
+								<h3 style="font-weight:bold;">【試試看】，哪個時節去清除小花蔓澤蘭，最能有效阻止它繼續蔓延?</h3>
 										<div class="40u 12u$(small)" style="margin:5px;">
 											<input type="radio" id="q4_1" name="q4" class="Answer_SingleOptionButton" value="1">
 											<label for="q4_1"><font size="5">1. 每年3～5月（春天）</font></label>
