--- a/202004WuGuWetlandsTask.html
+++ b/202004WuGuWetlandsTask.html
@@ -76,7 +76,7 @@
 					<a href="202004Bristlegrass.html"><div class="inner">
 						<header>
 							<p>夜空下 如果有誰呼喚，上面 有一種光，下面 有一隻蟋蟀，隱隱像要答應。──余光中 </p>
-							<h2>台灣人參</h2>
+							<h2>金色狗尾草</h2>
 						</header>
 					</div></a>
 				</article>
@@ -227,7 +227,7 @@
 								<div class="content">
 									<header class="align-center">
 										<p>五股溼地</p>
-										<h2>台灣人參</h2>
+										<h2>金色狗尾草</h2>
 									</header>
 									<p>但見風吹花浪滾滾，隨風起伏一望無際。</p>
 									<footer class="align-center">
