--- a/202004WuGuWetlands.html
+++ b/202004WuGuWetlands.html
@@ -41,7 +41,7 @@
 					<div class="box">
 						<div class="content">
 							<h2>各位聰明的小蜂、小蟻們～恭喜你們成功開啟了今天的團集會任務！</h2>
-							<h3>這個月我們來到由荒野保護協會所認養的五股濕地喔，這裡有許許多多不同的濕地植物、還有濕地常見的招潮蟹，彈塗魚...等等許多大自然中的好朋友等著我們去拜訪他們喔！</h3>
+							<h3>這個月我們來到由荒野保護協會所認養的五股濕地，這裡有許許多多不同的濕地植物、還有濕地常見的招潮蟹，彈塗魚...等等許多大自然中的好朋友等著我們去拜訪他們喔！</h3>
 							<h3>若要參加4/12一日限定的工作假期 - 清除小花蔓澤蘭，請<a href="https://forms.gle/YG99EaC4skZj58ob7" target="_blank">點此Google表單</a></h3>
 
 
