--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							<h2 style="font-weight:bold;">團集會探索任務</h2>
 							<h3>　　今天將由你們和爸爸媽媽組成親子隊，一起探索五股溼地，隨地圖的指示點及線上的活動說明，愉快的體驗每個任務！開始前，請先看活動說明：</h3>
 							<h3>1.	爸爸媽媽就是你們這次的導引員＋攝影官，負責傳達任務和紀錄活動過程，都會用到手機，所以除了找方向和討論任務以外的時間，請由爸爸媽媽來拿手機喔！</h3>
-							<h3>2.	闖關過程若遇到其他家庭成員記得趕快迴避~~說錯~~~是記得保持1公尺社交距離，還是可以熱情的打招呼。若路上太孤單想就地結盟基本上是不反對，但請不要找陌生人並以不超過3個家庭為限。</h3>
+							<h3>2.	闖關過程若遇到其他家庭成員記得趕快迴避~~說錯~~~是記得保持1公尺社交距離，還是可以熱情的打招呼。若路上太孤單想就地結盟基本上是不反對，但請不要找陌生人並以不超過3個家庭為限，<span style="font-weight:bold;color:red;">並請戴上口罩。</span></h3>
 							<h3>3.	時間沒有限制、活動沒有記分，卡關歡迎線上求救，記得所有的大人都是導引員，互相幫忙是應該的。</h3>
 							<h3>4.	除了用筆記、撿拾落葉創作外，這次也可以請爸媽試試利用APP拍照和紀錄軌跡，製作獨一無二的活動紀錄喔！</h3>
 							<hr />
