--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 
 
 							<a href="https://drive.google.com/open?id=1mLWNBCqkNP3nErz5panRMtplpTgPtP-H&usp=sharing" target="_blank"><span class="image fit"><img src="images/五股溼地探索地圖.jpg" alt="" /></span></a>
+							<h3>(直接點選地圖可查看關卡地點)</h3>
 							<hr />
 							
 
